crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_module-coupling.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
Each module's fan-in, fan-out and their sum over depends_on, most coupled first, paged, with the averages and the most coupled module.

Usage: specforge product module-coupling [OPTIONS]

Options:
      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
