crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_module-depth.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The longest depends_on chain from a module, the module first, and its length in edges; -1 and the cycle's members when the module is on or behind a dependency cycle.

Usage: specforge product module-depth [OPTIONS] <MODULE>

Arguments:
  <MODULE>
          The module id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
