crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_modules.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
List modules: each module's id, title, family, feature count, the modules it depends on and tags, filtered (every filter set must match), sorted (by id unless --sort-by says otherwise) and paged, with the total before paging.

Usage: specforge product modules [OPTIONS]

Options:
      --family <FAMILY>
          Only modules of this family (core, platform, extension, integration, advisory, or another)

      --tags <TAGS>
          Only modules with at least one of these tags (comma-separated)

      --sort-by <SORT_BY>
          The field to sort by (default id): id, title or a field a module declares; ties by id

      --sort-order <SORT_ORDER>
          asc (the default) or desc
          
          [possible values: asc, desc]

      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
