crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_persona-channels.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The channels of every journey the persona undertakes, once each, sorted.

Usage: specforge product persona-channels [OPTIONS] <PERSONA>

Arguments:
  <PERSONA>
          The persona id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
