crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_personas.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
List personas: each persona's id, title, technical level, status, journey count and tags, filtered (every filter set must match), sorted (by id unless --sort-by says otherwise) and paged, with the total before paging.

Usage: specforge product personas [OPTIONS]

Options:
      --status <STATUS>
          Only personas with this status: active (also a persona without one) or deprecated
          
          [possible values: active, deprecated]

      --technical-level <TECHNICAL_LEVEL>
          Only personas with this technical level: expert, advanced, intermediate, beginner or non_technical
          
          [possible values: expert, advanced, intermediate, beginner, non_technical]

      --tags <TAGS>
          Only personas with at least one of these tags (comma-separated)

      --sort-by <SORT_BY>
          The field to sort by (default id): id, title or a field a persona declares; ties by id

      --sort-order <SORT_ORDER>
          asc (the default) or desc
          
          [possible values: asc, desc]

      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
