crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_product.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: "product_help(&dir, &[\"--help\"])"
---
Usage: specforge product <COMMAND>

Commands:
  features                       List features
  journeys                       List journeys
  deliverables                   List deliverables
  milestones                     List milestones
  modules                        List modules
  terms                          List terms
  personas                       List personas
  channels                       List channels
  releases                       List releases
  milestone-completion           Show milestone completion progress
  journey-coverage               Show journey feature-module coverage
  feature-impact                 Show feature impact analysis
  feature-dependents             Show features that depend on a given feature
  persona-features               Show features reachable from a persona (via journeys)
  channel-features               Show features reachable from a channel (via journeys)
  deliverable-traceability       Show the features a deliverable reaches
  feature-deliverables           Show the deliverables holding a feature
  persona-channels               Show the channels a persona uses (via journeys)
  deliverable-personas           Show the personas a deliverable serves (via journeys)
  deliverable-completion         Show deliverable completion
  release-completion             Show release completion
  deliverable-priority           Show a deliverable's derived priority
  unscheduled-features           Show features no milestone schedules
  owner-workload                 Show ownership by owner
  feature-ordering               Show features in dependency order
  critical-path                  Show the critical path through milestones
  module-depth                   Show a module's dependency depth
  module-coupling                Show module coupling
  deliverable-dependents         Show deliverables that depend on a given deliverable
  coverage-matrix                Show the persona coverage matrix
  channel-coverage-matrix        Show the channel coverage matrix
  feature-overlap                Show features shared across deliverables
  term-graph                     Show the terms related to a term
  term-clusters                  Show clusters of related terms
  term-density                   Show how connected the glossary is
  milestone-timeline             Show the milestone timeline
  milestone-velocity             Show a milestone's velocity
  weighted-milestone-completion  Show a milestone's effort-weighted completion
  bulk-status                    Show status breakdown across all entity kinds
  health                         Show project health score
  help                           Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
