crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_releases.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
List releases: each release's id, title, version, status, deliverable count, release date and tags, filtered (every filter set must match), sorted (by id unless --sort-by says otherwise) and paged, with the total before paging.

Usage: specforge product releases [OPTIONS]

Options:
      --status <STATUS>
          Only releases with this status: planned (also a release without one), in_progress, released or recalled
          
          [possible values: planned, in_progress, released, recalled]

      --tags <TAGS>
          Only releases with at least one of these tags (comma-separated)

      --sort-by <SORT_BY>
          The field to sort by (default id): id, title or a field a release declares; ties by id

      --sort-order <SORT_ORDER>
          asc (the default) or desc
          
          [possible values: asc, desc]

      --limit <LIMIT>
          Return at most this many (default 100, clamped to 1-1000)

      --offset <OFFSET>
          Skip this many first (default 0)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
